--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-pnpm": "^1.2.9",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-remark-copy-linked-files": "^5.2.0",
