--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-remark-copy-linked-files": "^5.2.0",
+    "gatsby-remark-footnotes": "^0.0.8",
     "gatsby-remark-highlight-code": "^3.0.2",
     "gatsby-remark-images": "^6.2.0",
     "gatsby-remark-prismjs": "^6.2.0",
